// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`analyticsAction completeTestAfterDuration 1`] = `
Array [
  "completeTestAfterDuration",
  Object {
    "event_category": "Test",
    "value": 42,
  },
]
`;

exports[`analyticsAction firstSwipe 1`] = `
Array [
  "firstSwipe",
  Object {
    "event_category": "Test",
    "event_label": "traditional",
  },
]
`;

exports[`analyticsAction receiveKnownEstimate 1`] = `
Array [
  "receiveKnownEstimate",
  Object {
    "event_category": "Test results",
    "value": 980,
  },
]
`;

exports[`analyticsAction reviewMissed 1`] = `
Array [
  "reviewMissed",
  Object {
    "event_category": "Test results",
  },
]
`;
